Fixed layout bugs

--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -86,6 +86,10 @@
             transform: translateX(-100%);
         }
 
+        &--animations-disabled {
+            transition: none;
+        }
+
         &__close {
             position: absolute;
             top: 1rem;
